--- a/WebServiceDemo/Podfile
+++ b/WebServiceDemo/Podfile
@@ -1,14 +1,13 @@
-project 'ZipUnZip.xcodeproj'
+project 'WebServiceDemo.xcodeproj'
 
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+# platform :ios, '9.0'
 
-target 'ZipUnZip' do
+target 'WebServiceDemo' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for ZipUnZip
-#   source 'https://github.com/CocoaPods/Specs.git'
-  pod 'Zip', '1.0'
+  # Pods for WebServiceDemo
+  pod 'Alamofire', '~> 4.0'
   pod "Kanna", :git => 'https://github.com/tid-kijyun/Kanna.git', :branch => 'feature/v4.0.0'
 end
